Setup and first unit test on Nodes List

--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
