--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.5",
     "@material-ui/pickers": "^3.2.10",
     "@popperjs/core": "^2.0.0",
@@ -23,7 +24,6 @@
     "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.14.0",
-    "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
