Backend:   - Modified already existing connect endpoint   - Added get connect definition and add connect definition endpoints   - Edited application.yml and docker-compose.yml to add acls and multiconnects Frontend (WIP):   - Added connect definition list page   - Added add connect definition page   - Reorganized project structure

--- a/kafkahq.yml
+++ b/kafkahq.yml
@@ -24,6 +24,8 @@ kafkahq:
       connect:
         - name: connect-1
           url: http://connect-1:8083
+#        - name: connect-2
+#          url: http://connect-2:8084
 
 
   # Topic list display options (optional)
