- Updated Nodes to use new API endpoints - Deleted unnecessary old API classes - Fixed front-end dependencies

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ micronaut:
         paths: classpath:META-INF/swagger
         mapping: "${akhq.server.base-path:}/swagger/**"
   security:
-    enabled: true
+    enabled: false
     endpoints:
       login:
         enabled: true
