--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ plugins {
     id "com.gorylenko.gradle-git-properties" version "2.2.2"
 
     // akhq
+    id "com.github.node-gradle.node" version "1.3.0"
     id 'org.siouan.frontend' version '1.4.1'
     id 'com.adarshr.test-logger' version '2.0.0'
     id 'org.gradle.test-retry' version '1.1.4'
