--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "ace-builds": "^1.4.8",
     "axios": "^0.18.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "convert-units": "^2.3.4",
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
@@ -22,7 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-ace": "^8.0.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
