--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,14 @@
     "react": "^16.13.1",
     "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.1",
-    "react-datepicker": "^2.14.0",
-    "react-dom": "^16.12.0",
+    "react-datepicker": "^2.16.0",
+    "react-datetime-bootstrap": "^1.4.7",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.0",
+    "react-time-picker": "^4.0.1",
     "reactstrap": "^8.4.0",
     "style-loader": "^1.1.2"
   },
