AKHQ-197 - Organize Css (#125)
* implementing restyling: removed unused folders and files

* removed js folder

* updated styles

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ src/main/resources/static
 node_modules
 client/node_modules
 client/build
-
+client/assets
+client/src/App.scss
 ### Ide ###
 .idea/*
 .vscode/*
