--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,16 @@ micronaut:
   server:
     cors:
       enabled: true
+    port: 8081
   io:
     watch:
       paths: src/main
       restart: false # enabled dev server with env vars MICRONAUT_IO_WATCH_RESTART=true
   router:
     static-resources:
+      react:
+        paths: classpath:static/ui
+        mapping: "${akhq.server.base-path:}/ui/**"
       static:
         paths: classpath:static
         mapping: "${akhq.server.base-path:}/static/**"
@@ -28,12 +32,14 @@ micronaut:
         get-allowed: true
     session:
       enabled: true
-      login-success-target-url: "${akhq.server.base-path:}/api/me"
-      logout-target-url: "${akhq.server.base-path:}/api/me"
+      login-success-target-url: "${akhq.server.base-path:}/"
+      logout-target-url: "${akhq.server.base-path:}/"
       forbidden-target-url: "${akhq.server.base-path:}/login/forbidden"
       unauthorized-target-url: "${akhq.server.base-path:}/login/unauthorized"
       login-failure-target-url: "${akhq.server.base-path:}/login/failed"
     intercept-url-map:
+      - pattern: "${akhq.server.base-path:}/ui/**"
+        access: "isAnonymous()"
       - pattern: "${akhq.server.base-path:}/static/**"
         access: "isAnonymous()"
       - pattern: "${akhq.server.base-path:}/swagger/**"
