--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,69 +12,64 @@ services:
     volumes:
       - zookeeper-data:/var/lib/zookeeper/data
       - zookeeper-log:/var/lib/zookeeper/log
-    network_mode: host
-    ports:
-      - 2181:2181
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
   kafka:
     image: confluentinc/cp-kafka
     volumes:
       - kafka-data:/var/lib/kafka
-    network_mode: host
     ports:
       - 9092:9092
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_NUM_PARTITIONS: 12
       KAFKA_COMPRESSION_TYPE: gzip
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
       KAFKA_JMX_PORT: 9091
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.auth.SimpleAclAuthorizer
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
-
+    links:
+      - zookeeper
   schema-registry:
     image: confluentinc/cp-schema-registry
-    network_mode: host
     ports:
       - 8085:8085
     depends_on:
       - kafka
     environment:
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://localhost:9092"
-      SCHEMA_REGISTRY_HOST_NAME: localhost
-      SCHEMA_REGISTRY_LISTENERS: "http://localhost:8085"
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka:9092"
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_LISTENERS: "http://schema-registry:8085"
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: INFO
   connect-1:
     image: confluentinc/cp-kafka-connect
-    network_mode: host
     ports:
       - 8083:8083
     depends_on:
       - kafka
       - schema-registry
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: localhost:9092
+      CONNECT_BOOTSTRAP_SERVERS: kafka:9092
       CONNECT_REST_PORT: 8083
-      CONNECT_HOST_NAME: localhost
-      CONNECT_REST_LISTENERS: http://localhost:8083
-      CONNECT_LISTENERS: http://localhost:8083
-      CONNECT_REST_ADVERTISED_HOST_NAME: localhost
+      CONNECT_HOST_NAME: connect-1
+      CONNECT_REST_LISTENERS: http://connect-1:8083
+      CONNECT_LISTENERS: http://connect-1:8083
+      CONNECT_REST_ADVERTISED_HOST_NAME: connect-1
       CONNECT_CONFIG_STORAGE_TOPIC: __connect-1-config
       CONNECT_OFFSET_STORAGE_TOPIC: __connect-1-offsets
       CONNECT_STATUS_STORAGE_TOPIC: __connect-1-status
       CONNECT_GROUP_ID: "kafka-connect-1"
       CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "true"
       CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://localhost:8085
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8085
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "true"
       CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://localhost:8085
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8085
       CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
