AKHQ-222 - Topic Search Not Working (#138)
* implemented sse search on topic details

* changed base url

* docker-compose changes

* implemented some ui fixes to search

* changed base url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,27 @@ volumes:
   kafka-data:
     driver: local
 services:
+  akhq:
+    # build:
+    #   context: .
+    image: tchiotludo/akhq
+    environment:
+      AKHQ_CONFIGURATION: |
+        akhq:
+          connections:
+            docker-kafka-server:
+              properties:
+                bootstrap.servers: "kafka:9092"
+              schema-registry:
+                url: "http://schema-registry:8085"
+              connect:
+                url: "http://connect-1:8080"
+    ports:
+      - 8080:8080
+    links:
+      - kafka
+      - schema-registry
+      - connect-1
   zookeeper:
     image: confluentinc/cp-zookeeper
     volumes:
