--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,16 @@ build/*
 
 ### Assets
 src/main/resources/static
+src/main/resources/ui
 node_modules
 client/node_modules
 client/build
 client/assets
 client/src/App.scss
 client/bower_components
+client/node
+client/.env*.local
+
 ### Ide ###
 .idea/*
 .vscode/*
@@ -48,4 +52,4 @@ docs/contributors.html
 ## Docker
 .env
 docker-compose.override.yml
-/client/.gradle/
+
