--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,60 +1,23 @@
-buildscript {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
-    }
-
+repositories {
+    mavenLocal()
+    mavenCentral()
 }
 
-apply plugin: 'com.moowork.node'
+apply plugin: "org.siouan.frontend"
 
-/**********************************************************************************************************************\
- * Node + Webpack
- **********************************************************************************************************************/
-node {
-    version = '6.10.2'
-    npmVersion = '3.10.6'
-    //workDir = file('client')
-    //nodeModulesDir = file('client')
-    download = false
+frontend {
+    nodeVersion = '12.14.0'
+    assembleScript = 'run build'
 }
 
-//task build(type: NpmTask) {
-//    args = ['run', 'build']
-//}
-//build.dependsOn(npm_install)
-//
-//
-//task react(type: NpmTask, dependsOn: 'npmInstall') {
-//    args = ['run','start']
-//}
-
-task webpack(type: NpmTask, dependsOn: 'npmInstall') {
-    args = ['run','build']
-}
-
-task copyClientResources(dependsOn: 'webpack') {
-    group = 'build'
+task copyClientResources(dependsOn: 'assembleFrontend') {
+    group = 'frontend'
     description = 'Copy client resources into server'
-}
 
-copyClientResources.doFirst {
-    copy {
-        from "build"
-        into "../src/main/resources/static/ui/"
+    doFirst {
+        copy {
+            from "build"
+            into "../src/main/resources/ui/"
+        }
     }
 }
-//
-//task assembleServerAndClient(dependsOn: ['copyClientResources']) {
-//    group = 'build'
-//    description = 'Build combined server & client JAR'
-//}
-
-//jar.dependsOn 'copyClientResources'
-//processResources.dependsOn 'copyClientResources'
-
-//clean.delete << file("src/main/resources/static")
