--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "convert-units": "^2.3.4",
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
