--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "lint:fix": "eslint --fix ."
   },
   "eslintConfig": {
