--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -46,13 +46,13 @@ extraVolumes: []
 # Any extra volume mounts to define for the akhq container
 extraVolumeMounts: []
 # Add your own init container or uncomment and modify the example.
-initContainers: 
-  create-keystore: 
-    image: "openjdk:11-slim"
-    command: ['sh', '-c', 'keytool']
-    volumeMounts:
-      - mountPath: /tmp
-        name: certs
+initContainers: {}
+#   create-keystore: 
+#     image: "openjdk:11-slim"
+#     command: ['sh', '-c', 'keytool']
+#     volumeMounts:
+#      - mountPath: /tmp
+#        name: certs
 
 service:
   enabled: true
