--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -139,7 +139,7 @@ akhq:
     poll-timeout: 1000
 
   security:
-    default-group: reader
+    default-group: admin
     groups:
       admin:
         roles:
@@ -169,12 +169,28 @@ akhq:
       reader:
         roles:
           - topic/read
-          - topic/data/read
-          - topic/data/insert
-          - topic/data/delete
           - topic/insert
           - topic/delete
           - topic/config/update
+          - node/read
+          - node/config/update
+          - topic/data/read
+          - topic/data/insert
+          - topic/data/delete
+          - group/read
+          - group/delete
+          - group/offsets/update
+          - registry/read
+          - registry/insert
+          - registry/update
+          - registry/delete
+          - registry/version/delete
+          - acls/read
+          - connect/read
+          - connect/insert
+          - connect/update
+          - connect/delete
+          - connect/state/update
       no-roles:
         roles: []
     basic-auth:
