--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,131 +1,176 @@
 version: '3.6'
-
 volumes:
-  zookeeper-data:
+  zookeeper-data-0:
     driver: local
-  zookeeper-log:
+  zookeeper-log-0:
     driver: local
-  kafka-data:
+  kafka-data-0:
     driver: local
-
+  zookeeper-data-1:
+    driver: local
+  zookeeper-log-1:
+    driver: local
+  kafka-data-1:
+    driver: local
 services:
   akhq:
-    # build:
-    #   context: .
     image: tchiotludo/akhq
     environment:
       AKHQ_CONFIGURATION: |
         akhq:
           connections:
-            docker-kafka-server:
+            docker-kafka-server-1:
               properties:
-                bootstrap.servers: "kafka:9092"
+                bootstrap.servers: "kafka-0:29092"
               schema-registry:
-                url: "http://schema-registry:8085"
+                url: "http://schema-registry-0:8085"
               connect:
-                url: "http://connect:8083"
+                - name: connect-1
+                  url: "http://connect-0:8083"
+                - name: connect-2
+                  url: "http://connect-1:8084"
+            docker-kafka-server-2:
+              properties:
+                bootstrap.servers: "kafka-1:29072"
     ports:
       - 8080:8080
     links:
-      - kafka
-      - schema-registry
-
-  zookeeper:
+      - kafka-0
+      - schema-registry-0
+      - connect-0
+      - connect-1
+      - kafka-1
+  zookeeper-0:
     image: confluentinc/cp-zookeeper
     volumes:
-      - zookeeper-data:/var/lib/zookeeper/data
-      - zookeeper-log:/var/lib/zookeeper/log
+      - zookeeper-data-0:/var/lib/zookeeper/data
+      - zookeeper-log-0:/var/lib/zookeeper/log
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-
-  kafka:
+  kafka-0:
     image: confluentinc/cp-kafka
     volumes:
-      - kafka-data:/var/lib/kafka
+      - kafka-data-0:/var/lib/kafka
+    ports:
+      - 9092:9092
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-0:2181
       KAFKA_NUM_PARTITIONS: 12
       KAFKA_COMPRESSION_TYPE: gzip
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
       KAFKA_JMX_PORT: 9091
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.auth.SimpleAclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+      KAFKA_LISTENERS: INTERNAL://kafka-0:29092,OUTSIDE://kafka-0:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-0:29092,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
     links:
-      - zookeeper
-
-  schema-registry:
+      - zookeeper-0
+  schema-registry-0:
     image: confluentinc/cp-schema-registry
+    ports:
+      - 8085:8085
     depends_on:
-      - kafka
+      - kafka-0
     environment:
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka:9092"
-      SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_LISTENERS: "http://0.0.0.0:8085"
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka-0:29092"
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry-0
+      SCHEMA_REGISTRY_LISTENERS: "http://schema-registry-0:8085"
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: INFO
-
-  connect:
+  connect-0:
     image: confluentinc/cp-kafka-connect
+    ports:
+      - 8083:8083
     depends_on:
-      - kafka
-      - schema-registry
+      - kafka-0
+      - schema-registry-0
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: kafka:9092
+      CONNECT_BOOTSTRAP_SERVERS: kafka-0:29092
       CONNECT_REST_PORT: 8083
-      CONNECT_REST_LISTENERS: http://0.0.0.0:8083
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect
-      CONNECT_CONFIG_STORAGE_TOPIC: __connect-config
-      CONNECT_OFFSET_STORAGE_TOPIC: __connect-offsets
-      CONNECT_STATUS_STORAGE_TOPIC: __connect-status
-      CONNECT_GROUP_ID: "kafka-connect"
+      CONNECT_HOST_NAME: connect-0
+      CONNECT_REST_LISTENERS: http://connect-0:8083
+      CONNECT_LISTENERS: http://connect-0:8083
+      CONNECT_REST_ADVERTISED_HOST_NAME: connect-0
+      CONNECT_CONFIG_STORAGE_TOPIC: __connect-0-config
+      CONNECT_OFFSET_STORAGE_TOPIC: __connect-0-offsets
+      CONNECT_STATUS_STORAGE_TOPIC: __connect-0-status
+      CONNECT_GROUP_ID: "kafka-connect-0"
       CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "true"
       CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8085
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "true"
       CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8085
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
       CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_PLUGIN_PATH: ' /usr/share/java/'
-
-  test-data:
-    image: gradle:6.3-jdk11
-    command: "gradle --no-daemon testInjectData"
-    working_dir: /app
+  connect-1:
+    image: confluentinc/cp-kafka-connect
+    ports:
+      - 8084:8084
+    depends_on:
+      - kafka-0
+      - schema-registry-0
+    environment:
+      CONNECT_BOOTSTRAP_SERVERS: kafka-0:29092
+      CONNECT_REST_PORT: 8084
+      CONNECT_HOST_NAME: connect-1
+      CONNECT_REST_LISTENERS: http://connect-1:8084
+      CONNECT_LISTENERS: http://connect-1:8084
+      CONNECT_REST_ADVERTISED_HOST_NAME: connect-1
+      CONNECT_CONFIG_STORAGE_TOPIC: __connect-1-config
+      CONNECT_OFFSET_STORAGE_TOPIC: __connect-1-offsets
+      CONNECT_STATUS_STORAGE_TOPIC: __connect-1-status
+      CONNECT_GROUP_ID: "kafka-connect-1"
+      CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "true"
+      CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
+      CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "true"
+      CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
+      CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_PLUGIN_PATH: ' /usr/share/java/'
+  # ANOTHER CLUSTER
+  zookeeper-1:
+    image: confluentinc/cp-zookeeper
     volumes:
-      - ./:/app
+      - zookeeper-data-1:/var/lib/zookeeper/data
+      - zookeeper-log-1:/var/lib/zookeeper/log
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2171
+  kafka-1:
+    image: confluentinc/cp-kafka
+    volumes:
+      - kafka-data-1:/var/lib/kafka
+    ports:
+      - 9072:9072
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2171
+      KAFKA_NUM_PARTITIONS: 12
+      KAFKA_COMPRESSION_TYPE: gzip
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
+      KAFKA_JMX_PORT: 9071
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.auth.SimpleAclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+      KAFKA_LISTENERS: INTERNAL://kafka-1:29072,OUTSIDE://kafka-1:9072
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:29072,OUTSIDE://localhost:9072
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
     links:
-      - kafka
-      - schema-registry
-
-  kafkacat:
-    image: confluentinc/cp-kafkacat
-    command: 
-      - bash 
-      - -c 
-      - |
-        kafkacat -P -b kafka:9092 -t json << EOF
-        {"_id":"5c4b2b45ab234c86955f0802","index":0,"guid":"d3637b06-9940-4958-9f82-639001c14c34"}
-        {"_id":"5c4b2b459ffa9bb0c0c249e1","index":1,"guid":"08612fb5-40a7-45e5-9ff2-beb89a1b2835"}
-        {"_id":"5c4b2b4545d7cbc7bf8b6e3e","index":2,"guid":"4880280a-cf8b-4884-881e-7b64ebf2afd0"}
-        {"_id":"5c4b2b45dab381e6b3024c6d","index":3,"guid":"36d04c26-0dae-4a8e-a66e-bde9b3b6a745"}
-        {"_id":"5c4b2b45d1103ce30dfe1947","index":4,"guid":"14d53f2c-def3-406f-9dfb-c29963fdc37e"}
-        {"_id":"5c4b2b45d6d3b5c51d3dacb7","index":5,"guid":"a20cfc3a-934a-4b93-9a03-008ec651b5a4"}
-        EOF
-        
-        kafkacat -P -b kafka:9092 -t csv << EOF
-        1,Sauncho,Attfield,sattfield0@netlog.com,Male,221.119.13.246
-        2,Luci,Harp,lharp1@wufoo.com,Female,161.14.184.150
-        3,Hanna,McQuillan,hmcquillan2@mozilla.com,Female,214.67.74.80
-        4,Melba,Lecky,mlecky3@uiuc.edu,Female,158.112.18.189
-        5,Mordecai,Hurdiss,mhurdiss4@rambler.ru,Male,175.123.45.143
-        EOF
-
-        kafkacat -b kafka:9092 -o beginning -G json-consumer json
-    links:
-      - kafka
+      - zookeeper-1
