--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.0",
     "jquery-ui": "^1.12.1",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "popper.js": "^1.16.1",
     "sweetalert2": "^7.33.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
@@ -31,9 +32,9 @@
     "sass-loader": "8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
-    "webpack": "4.41.5",
+    "webpack": "4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "3.10.2",
+    "webpack-dev-server": "3.10.3",
     "webpack-merge": "^4.2.2"
   },
   "scripts": {
