--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "sass-loader": "8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
-    "webpack": "4.41.5",
+    "webpack": "4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "3.10.2",
-    "webpack-merge": "^4.2.2"
+    "webpack-dev-server": "3.10.3",
+    "webpack-merge": "^4.2.2",
+    "babel-eslint": "10.1.0"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
