--- a/client/package.json
+++ b/client/package.json
@@ -71,7 +71,6 @@
     "jest-dom": "^4.0.0",
     "joi-browser": "^13.4.0",
     "prettier": "^1.19.1",
-    "react-test-render": "^1.1.2",
-    "webpack": "4.42.0"
+    "react-test-render": "^1.1.2"
   }
 }
