refactored login handle for first-time enter in the website (#193)

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "3.10.3",
     "webpack-merge": "^4.2.2",
-    "babel-eslint": "10.1.0"
+    "babel-eslint": "10.1.0",
+    "webpack": "4.42.0"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
