--- a/helm/akhq/templates/ingress.yaml
+++ b/helm/akhq/templates/ingress.yaml
@@ -1,7 +1,13 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "akhq.fullname" . -}}
 {{- $ingressPaths := .Values.ingress.paths -}}
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+apiVersion: networking.k8s.io/v1
+{{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
 apiVersion: networking.k8s.io/v1beta1
+{{ else }}
+apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -27,14 +33,25 @@ spec:
 {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
+  {{- $pathType := $.Values.ingress.pathType }}
     - host: {{ . | quote }}
       http:
         paths:
 	{{- range $ingressPaths }}
           - path: {{ . }}
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+            pathType: {{ $pathType | default "ImplementationSpecific" }}
+            {{- end }}
             backend:
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  name: http
+            {{ else }}
               serviceName: {{ $fullName }}
               servicePort: http
+            {{- end }}
 	{{- end }}
   {{- end }}
 {{- end }}
