--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -66,7 +66,8 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  paths: []
+  paths:
+    - /
   hosts:
     - akhq.demo.com
   tls: []
