--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,9 +18,9 @@ services:
     command: "gradle run --continuous"
     working_dir: /app
     volumes:
-      - ./:/app
-      - /app/.gradle
-      - ./gradle/gradle.properties:/root/.gradle/gradle.properties
+      - ./:/app:z
+      - /app/.gradle:Z
+      - ./gradle/gradle.properties:/root/.gradle/gradle.properties:Z
     ports:
       - 127.11.8.17:8080:8080
     environment:
@@ -34,7 +34,7 @@ services:
     command: "sh -c 'npm install && npm run dev'"
     working_dir: /app
     volumes:
-      - ./:/app
+      - ./:/app:z
     ports:
       - 127.11.8.17:8081:8081
     depends_on:
@@ -46,9 +46,9 @@ services:
     working_dir: /app/client
     tty: true
     volumes:
-      - ./:/app
-      - ui-modules:/app/client/node_modules
-      - ui-build:/app/client/build
+      - ./:/app:z
+      - ui-modules:/app/client/node_modules:Z
+      - ui-build:/app/client/build:Z
     ports:
       - 127.11.8.17:3000:3000
     depends_on:
@@ -57,8 +57,8 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper
     volumes:
-      - zookeeper-data:/var/lib/zookeeper/data
-      - zookeeper-log:/var/lib/zookeeper/log
+      - zookeeper-data:/var/lib/zookeeper/data:Z
+      - zookeeper-log:/var/lib/zookeeper/log:Z
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
@@ -67,7 +67,7 @@ services:
   kafka:
     image: confluentinc/cp-kafka
     volumes:
-      - kafka-data:/var/lib/kafka/data
+      - kafka-data:/var/lib/kafka/data:Z
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_NUM_PARTITIONS: 12
@@ -128,5 +128,5 @@ services:
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_PLUGIN_PATH: ' /usr/share/java/'
     volumes:
-      - ./connects-plugins:/usr/share/java/connects-plugins
+      - ./connects-plugins:/usr/share/java/connects-plugins:Z
 
