--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,15 +33,15 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper
     volumes:
-      - zookeeper-data:/var/lib/zookeeper/data
-      - zookeeper-log:/var/lib/zookeeper/log
+      - zookeeper-data:/var/lib/zookeeper/data:Z
+      - zookeeper-log:/var/lib/zookeeper/log:Z
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
     image: confluentinc/cp-kafka
     volumes:
-      - kafka-data:/var/lib/kafka
+      - kafka-data:/var/lib/kafka:Z
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_NUM_PARTITIONS: 12
@@ -98,7 +98,7 @@ services:
     command: "gradle --no-daemon testInjectData"
     working_dir: /app
     volumes:
-      - ./:/app
+      - ./:/app:z
     links:
       - kafka
       - schema-registry
