--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,6 +25,7 @@ services:
       - 8080:8080
     environment:
       MICRONAUT_IO_WATCH_RESTART: 'true'
+      MICRONAUT_CONFIG_FILES: '/app/application.dev.yml'
     depends_on:
       - kafka
       - schema-registry
