Explicitly disable the new zookeeper HTTP "Admin server"
This is new in zookeeper 3.5 (which is used by the newer confluentinc images), and the default
port 8080 conflicts with akhq, preventing that from starting up.

--- a/docker-compose-multiple-clusters.yml
+++ b/docker-compose-multiple-clusters.yml
@@ -47,6 +47,7 @@ services:
       - zookeeper-log-0:/var/lib/zookeeper/log:Z
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
   kafka-0:
     image: confluentinc/cp-kafka
     volumes:
@@ -150,6 +151,7 @@ services:
       - zookeeper-log-1:/var/lib/zookeeper/log:Z
     environment:
       ZOOKEEPER_CLIENT_PORT: 2171
+      ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
   kafka-1:
     image: confluentinc/cp-kafka
     volumes:
