--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -50,6 +50,7 @@ services:
       - zookeeper-log:/var/lib/zookeeper/log:Z
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
     ports:
       - 2181:2181
 
