--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,9 +105,11 @@ services:
 
   kafkacat:
     image: confluentinc/cp-kafkacat
-    command: 
-      - bash 
-      - -c 
+    depends_on:
+      - kafka
+    command:
+      - bash
+      - -c
       - |
         kafkacat -P -b kafka:9092 -t json << EOF
         {"_id":"5c4b2b45ab234c86955f0802","index":0,"guid":"d3637b06-9940-4958-9f82-639001c14c34"}
@@ -117,7 +119,7 @@ services:
         {"_id":"5c4b2b45d1103ce30dfe1947","index":4,"guid":"14d53f2c-def3-406f-9dfb-c29963fdc37e"}
         {"_id":"5c4b2b45d6d3b5c51d3dacb7","index":5,"guid":"a20cfc3a-934a-4b93-9a03-008ec651b5a4"}
         EOF
-        
+
         kafkacat -P -b kafka:9092 -t csv << EOF
         1,Sauncho,Attfield,sattfield0@netlog.com,Male,221.119.13.246
         2,Luci,Harp,lharp1@wufoo.com,Female,161.14.184.150
