Assign a broker id to the Kafka brokers
This should make stopping and starting a docker-compose environment
possible without losing all data in it.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -59,6 +59,7 @@ services:
     volumes:
       - kafka-data:/var/lib/kafka/data:Z
     environment:
+      KAFKA_BROKER_ID: '0'
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_NUM_PARTITIONS: '12'
       KAFKA_COMPRESSION_TYPE: 'gzip'
