--- a/docker-compose-multiple-clusters.yml
+++ b/docker-compose-multiple-clusters.yml
@@ -55,6 +55,7 @@ services:
     ports:
       - 9092:9092
     environment:
+      KAFKA_BROKER_ID: '0'
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-0:2181'
       KAFKA_NUM_PARTITIONS: '12'
       KAFKA_COMPRESSION_TYPE: 'gzip'
@@ -159,6 +160,7 @@ services:
     ports:
       - 9072:9072
     environment:
+      KAFKA_BROKER_ID: '0'
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-1:2171'
       KAFKA_NUM_PARTITIONS: '12'
       KAFKA_COMPRESSION_TYPE: 'gzip'
