--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -57,7 +57,7 @@ services:
   kafka:
     image: confluentinc/cp-kafka
     volumes:
-      - kafka-data:/var/lib/kafka/data:Z
+      - kafka-data:/var/lib/kafka:Z
     environment:
       KAFKA_BROKER_ID: '0'
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
