fix(auth): Merging basic groups with configured groups

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -132,7 +132,7 @@ akhq:
 
   security:
     default-group: admin
-    groups:
+    basic-groups:
     - name: admin
       roles:
       - topic/read
