fix(auth): Use a map for security group configuration

--- a/src/test/resources/application-extragroups.yml
+++ b/src/test/resources/application-extragroups.yml
@@ -1,10 +1,10 @@
 akhq:
   security:
     groups:
-      - name: extra
+      extra:
         roles:
           - topic/read
-      - name: another
+      another:
         roles:
           - topic/read
 
