--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -77,8 +77,8 @@ akhq:
 
   security:
     default-group: no-filter
-    basic-groups:
-      - name: admin
+    groups:
+      admin:
         roles:
           - topic/read
           - topic/insert
@@ -103,7 +103,7 @@ akhq:
           - connect/update
           - connect/delete
           - connect/state/update
-      - name: limited
+      limited:
         roles:
           - topic/read
           - topic/insert
@@ -111,7 +111,7 @@ akhq:
           - registry/version/delete
         attributes:
           topics-filter-regexp: "test.*"
-      - name: operator
+      operator:
         roles:
           - topic/read
           - topic/data/read
@@ -119,7 +119,7 @@ akhq:
           - topic/data/delete
         attributes:
           topics-filter-regexp: "test-operator.*"
-      - name: no-filter
+      no-filter:
         roles:
           - topic/read
           - topic/insert
