feat(charts): add existing secrets support

--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -33,22 +33,24 @@ configuration: |
         name: org.akhq.log.access
 
 ##... and secret for connection information
-secrets: |
-  akhq:
-    connections:
-      my-cluster-plain-text:
-        properties:
-          bootstrap.servers: "kafka:9092"
-        schema-registry:
-          url: "http://schema-registry:8085"
-          type: "confluent"
-          basic-auth-username: basic-auth-user
-          basic-auth-password: basic-auth-pass
-        connect:
-          - name: "my-connect"
-            url: "http://connect:8083"
-            basic-auth-username: basic-auth-user
-            basic-auth-password: basic-auth-pass
+existingSecrets: ""
+# name of the existingSecret
+secrets: {}
+#  akhq:
+#    connections:
+#      my-cluster-plain-text:
+#        properties:
+#          bootstrap.servers: "kafka:9092"
+#        schema-registry:
+#          url: "http://schema-registry:8085"
+#          type: "confluent"
+#          basic-auth-username: basic-auth-user
+#          basic-auth-password: basic-auth-pass
+#        connect:
+#          - name: "my-connect"
+#            url: "http://connect:8083"
+#            basic-auth-username: basic-auth-user
+#            basic-auth-password: basic-auth-pass
 
 kafkaSecrets: []
 #Provide extra base64 encoded kubernetes secrets (keystore/truststore)
