--- a/helm/akhq/templates/configmap.yaml
+++ b/helm/akhq/templates/configmap.yaml
@@ -10,5 +10,5 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 data:
   application.yml: |
-{{ toYaml .Values.configuration | nindent 4}}
+{{ toYaml .Values.configuration | indent 4}}
 {{- end }}
