--- a/src/test/resources/application-keycloak.yml
+++ b/src/test/resources/application-keycloak.yml
@@ -65,6 +65,7 @@ akhq:
   security:
     default-group: no-filter
     basic-auth: []
+    groups:
       no-filter:
         name: no-filter
         roles:
