Changed kafka-max-message-length config variable to application.yml and delegate 'truncate message' to frontend

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,6 +90,8 @@ akhq:
       filters:
         - "((?!/health).)*"
 
+  kafka-max-message-length: 1000000
+
   clients-defaults:
     consumer:
       properties:
