Make the dev build work on apple m1

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "json-bigint": "^1.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-ace": "^9.1.2",
@@ -29,7 +28,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-timeago": "^6.2.1",
     "react-toastify": "^6.0.6",
     "reactstrap": "^8.4.0"
@@ -52,8 +51,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@testing-library/react": "^10.4.7",
     "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.1.0",
     "babel-eslint": "10.1.0",
     "enzyme": "^3.11.0",
@@ -64,7 +63,8 @@
     "jest-dom": "^4.0.0",
     "joi-browser": "^13.4.0",
     "prettier": "^2.0.5",
-    "react-test-render": "^1.1.2",
+    "react-test-renderer": "^16.13.1",
+    "sass": "^1.55.0",
     "style-loader": "^1.1.2",
     "webpack": "4.42.0"
   },
