Fix... eslint fix command

--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix src/**/*.js{,x}"
   },
   "eslintConfig": {
     "extends": "react-app"
