--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,13 +1,10 @@
 {
-  "parser": "babel",
   "trailingComma": "none",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "extends": ["plugin:prettier/recommended"],
   "printWidth": 100,
   "arrowParens": "avoid",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false
-
+  "bracketSameLine": false
 }
