Add OAtuth Support

--- a/build.gradle
+++ b/build.gradle
@@ -132,6 +132,9 @@ dependencies {
 
     //AWS MSK IAM Auth
     implementation group: 'software.amazon.msk', name: 'aws-msk-iam-auth', version: '1.1.5'
+
+    // https://mvnrepository.com/artifact/io.projectreactor/reactor-core
+    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.1'
 }
 
 /**********************************************************************************************************************\
