feat(ksqldb): initial contribution for ksqlDB integration

--- a/application-dev.yml
+++ b/application-dev.yml
@@ -17,3 +17,6 @@ akhq:
       connect:
         - name: "connect"
           url: "http://connect:8083"
+      ksqldb:
+        - name: "ksqldb"
+          url: "http://ksqldb:8088"
