feat(ksqldb): initial contribution for ksqlDB integration

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -104,6 +104,8 @@ akhq:
           - connect/update
           - connect/delete
           - connect/state/update
+          - ksqldb/read
+          - ksqldb/execute
         attributes:
           acls-filter-regexp:
             - "user.*"
