fix(build): remove slf4j-reload4j that break application logger

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ configurations.all {
     exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+    exclude group: 'org.slf4j', module: 'slf4j-reload4j'
 
     resolutionStrategy {
         force("org.apache.kafka:kafka-clients:" + kafkaVersion)
